# orca

./: .gitignore  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  OrcaHUD  README.md  a.out  cmake_install.cmake  main  main.cpp
console/: main.cpp
db/: db.hpp  players.csv  players.txt  settings.txt
gui/: main.cpp  main.h
parser/: handhistory.txt  parser  parser.cpp  parser.hpp  types.cpp  types.hpp
